--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -1,3 +1,71 @@
 /* 
     General Styles
 */
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+body, #app {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    min-height: 100vh;
+}
+#app {
+    display: flex;
+    flex-direction: column;
+}
+.view {
+    margin-block: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.scale {
+    transform: scale(1.4);
+}
+footer {
+    background: rgba(0, 183, 255, 0.205);
+    padding-block: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    & > * {
+        margin: 0
+    }
+}
+.dflex-column {
+    display: flex;
+    flex-direction: column;
+}
+a{
+    text-decoration: none;
+    color: rgb(0, 183, 255);
+    &:hover {color: rgb(3, 158, 219);}
+}
+
+
+/*NAVBAR*/
+
+
+
+/*LOGIN*/
+
+
+/*PROFILE*/
+.profile-container {
+    width: fit-content;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+}
+
+.profile-container ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.profile-container ul li {
+    display: flex;
+}
+.profile-container ul li span {
+    color: rgb(3, 158, 219);
+}
